--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,9 @@
 @import "tailwindcss";
 
-.active hr{
-  @apply block
+.active hr {
+  @apply block;
 }
 
 ::-webkit-scrollbar {
-  @apply hidden
+  @apply hidden;
 }
